# GL_Basecamp

splitted_transfer/: CMakeLists.txt
splitted_transfer/filesystem/: filesystem_utility.hxx
splitted_transfer/filesystem/tests/: general.cxx
splitted_transfer/filetransfer/: CTransferTunnel.hxx
splitted_transfer/filetransfer/tests/: general.cxx
splitted_transfer/network/: CIPAddress.hxx
splitted_transfer/network/source/POSIX/: Source.cxx
splitted_transfer/network/tests/: basic_semantics.cxx
src/: CMakeLists.txt  splitted_transfer.cxx
src/application/: .CClient.cxx.kate-swp  CClient.cxx  CInterpreterClientSocket.cxx  CInterpreterClientSocket.hxx
src/filesystem/: CMakeLists.txt  filesystem.hxx
src/filesystem/backends/POSIX/: socket_implementation.hxx
src/filesystem/source/POSIX/: Source.cxx
src/filesystem/source/WinAPI/: Source.cxx
src/filetransfer/: .CFileTransfer.hxx.kate-swp  CFileTransfer.hxx  CFileTransfer.hxx.Yp2004  CMakeLists.txt  CTransferTunnel.cxx  CTransferTunnel.cxx.MF2004  CTransferTunnel.cxx.rs2004  CTransferTunnel.cxx.yV2004  CTransferTunnel.hxx
src/filetransfer/tests/: general.cxx
src/network/: .Exception.hxx.kate-swp  CIPAddress.hxx  CMakeCache.txt  CMakeLists.txt  CSocket.hxx  CSocket.hxx.sM2004  CSocket.hxx.xI2004  CSocket.hxx.zG2004  CSocket.hxx.zf2004  Exception.hxx  Makefile  Types.hxx  basic_semantics  cmake_install.cmake
src/network/backends/POSIX/: Source.cxx
src/network/source/POSIX/: Source.cxx
src/network/source/WinAPI/: .Source.cxx.kate-swp  Source.cxx  Source.cxx.Nl2004  Source.cxx.OA2004  Source.cxx.dh2004  Source.cxx.ko2004  Source.cxx.vT2004
src/network/tests/: basic_semantics.cxx  basic_semantics.cxx.Sr7320
